// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaTree output given anyOf combiner placed next to allOf given allOf merging disabled, should still merge 1`] = `
"└─ #
   ├─ combiners
   │  └─ 0: anyOf
   └─ children
      ├─ 0
      │  └─ #/anyOf/0
      │     ├─ combiners
      │     │  └─ 0: allOf
      │     └─ children
      │        ├─ 0
      │        │  └─ #/anyOf/0/allOf/0
      │        │     ├─ types
      │        │     │  └─ 0: object
      │        │     ├─ primaryType: object
      │        │     └─ children
      │        │        ├─ 0
      │        │        │  └─ #/anyOf/0/allOf/0/properties/type
      │        │        │     ├─ types
      │        │        │     │  └─ 0: string
      │        │        │     ├─ primaryType: string
      │        │        │     └─ enum
      │        │        │        ├─ 0: admin
      │        │        │        └─ 1: editor
      │        │        └─ 1
      │        │           └─ #/anyOf/0/allOf/0/properties/enabled
      │        │              ├─ types
      │        │              │  └─ 0: boolean
      │        │              └─ primaryType: boolean
      │        └─ 1
      │           └─ #/anyOf/0/allOf/1
      │              ├─ types
      │              │  └─ 0: object
      │              ├─ primaryType: object
      │              └─ children
      │                 ├─ 0
      │                 │  └─ #/anyOf/0/allOf/1/properties/root
      │                 │     ├─ types
      │                 │     │  └─ 0: boolean
      │                 │     └─ primaryType: boolean
      │                 ├─ 1
      │                 │  └─ #/anyOf/0/allOf/1/properties/group
      │                 │     ├─ types
      │                 │     │  └─ 0: string
      │                 │     └─ primaryType: string
      │                 └─ 2
      │                    └─ #/anyOf/0/allOf/1/properties/expirationDate
      │                       ├─ types
      │                       │  └─ 0: string
      │                       └─ primaryType: string
      └─ 1
         └─ #/anyOf/1
            ├─ combiners
            │  └─ 0: allOf
            └─ children
               ├─ 0
               │  └─ #/anyOf/1/allOf/0
               │     ├─ types
               │     │  └─ 0: object
               │     ├─ primaryType: object
               │     └─ children
               │        ├─ 0
               │        │  └─ #/anyOf/1/allOf/0/properties/type
               │        │     ├─ types
               │        │     │  └─ 0: string
               │        │     ├─ primaryType: string
               │        │     └─ enum
               │        │        ├─ 0: admin
               │        │        └─ 1: editor
               │        └─ 1
               │           └─ #/anyOf/1/allOf/0/properties/enabled
               │              ├─ types
               │              │  └─ 0: boolean
               │              └─ primaryType: boolean
               └─ 1
                  └─ #/anyOf/1/allOf/1
                     ├─ types
                     │  └─ 0: object
                     ├─ primaryType: object
                     └─ children
                        ├─ 0
                        │  └─ #/anyOf/1/allOf/1/properties/supervisor
                        │     ├─ types
                        │     │  └─ 0: string
                        │     └─ primaryType: string
                        └─ 1
                           └─ #/anyOf/1/allOf/1/properties/key
                              ├─ types
                              │  └─ 0: string
                              └─ primaryType: string
"
`;

exports[`SchemaTree output given anyOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"└─ #
   ├─ combiners
   │  └─ 0: anyOf
   └─ children
      ├─ 0
      │  └─ #/anyOf/0
      │     ├─ types
      │     │  └─ 0: object
      │     ├─ primaryType: object
      │     └─ children
      │        ├─ 0
      │        │  └─ #/anyOf/0/properties/type
      │        │     ├─ types
      │        │     │  └─ 0: string
      │        │     ├─ primaryType: string
      │        │     └─ enum
      │        │        ├─ 0: admin
      │        │        └─ 1: editor
      │        ├─ 1
      │        │  └─ #/anyOf/0/properties/enabled
      │        │     ├─ types
      │        │     │  └─ 0: boolean
      │        │     └─ primaryType: boolean
      │        ├─ 2
      │        │  └─ #/anyOf/0/properties/root
      │        │     ├─ types
      │        │     │  └─ 0: boolean
      │        │     └─ primaryType: boolean
      │        ├─ 3
      │        │  └─ #/anyOf/0/properties/group
      │        │     ├─ types
      │        │     │  └─ 0: string
      │        │     └─ primaryType: string
      │        └─ 4
      │           └─ #/anyOf/0/properties/expirationDate
      │              ├─ types
      │              │  └─ 0: string
      │              └─ primaryType: string
      └─ 1
         └─ #/anyOf/1
            ├─ types
            │  └─ 0: object
            ├─ primaryType: object
            └─ children
               ├─ 0
               │  └─ #/anyOf/1/properties/type
               │     ├─ types
               │     │  └─ 0: string
               │     ├─ primaryType: string
               │     └─ enum
               │        ├─ 0: admin
               │        └─ 1: editor
               ├─ 1
               │  └─ #/anyOf/1/properties/enabled
               │     ├─ types
               │     │  └─ 0: boolean
               │     └─ primaryType: boolean
               ├─ 2
               │  └─ #/anyOf/1/properties/supervisor
               │     ├─ types
               │     │  └─ 0: string
               │     └─ primaryType: string
               └─ 3
                  └─ #/anyOf/1/properties/key
                     ├─ types
                     │  └─ 0: string
                     └─ primaryType: string
"
`;

exports[`SchemaTree output given oneOf combiner placed next to allOf given allOf merging disabled, should still merge 1`] = `
"└─ #
   ├─ combiners
   │  └─ 0: oneOf
   └─ children
      ├─ 0
      │  └─ #/oneOf/0
      │     ├─ combiners
      │     │  └─ 0: allOf
      │     └─ children
      │        ├─ 0
      │        │  └─ #/oneOf/0/allOf/0
      │        │     ├─ types
      │        │     │  └─ 0: object
      │        │     ├─ primaryType: object
      │        │     └─ children
      │        │        ├─ 0
      │        │        │  └─ #/oneOf/0/allOf/0/properties/type
      │        │        │     ├─ types
      │        │        │     │  └─ 0: string
      │        │        │     ├─ primaryType: string
      │        │        │     └─ enum
      │        │        │        ├─ 0: admin
      │        │        │        └─ 1: editor
      │        │        └─ 1
      │        │           └─ #/oneOf/0/allOf/0/properties/enabled
      │        │              ├─ types
      │        │              │  └─ 0: boolean
      │        │              └─ primaryType: boolean
      │        └─ 1
      │           └─ #/oneOf/0/allOf/1
      │              ├─ types
      │              │  └─ 0: object
      │              ├─ primaryType: object
      │              └─ children
      │                 ├─ 0
      │                 │  └─ #/oneOf/0/allOf/1/properties/root
      │                 │     ├─ types
      │                 │     │  └─ 0: boolean
      │                 │     └─ primaryType: boolean
      │                 ├─ 1
      │                 │  └─ #/oneOf/0/allOf/1/properties/group
      │                 │     ├─ types
      │                 │     │  └─ 0: string
      │                 │     └─ primaryType: string
      │                 └─ 2
      │                    └─ #/oneOf/0/allOf/1/properties/expirationDate
      │                       ├─ types
      │                       │  └─ 0: string
      │                       └─ primaryType: string
      └─ 1
         └─ #/oneOf/1
            ├─ combiners
            │  └─ 0: allOf
            └─ children
               ├─ 0
               │  └─ #/oneOf/1/allOf/0
               │     ├─ types
               │     │  └─ 0: object
               │     ├─ primaryType: object
               │     └─ children
               │        ├─ 0
               │        │  └─ #/oneOf/1/allOf/0/properties/type
               │        │     ├─ types
               │        │     │  └─ 0: string
               │        │     ├─ primaryType: string
               │        │     └─ enum
               │        │        ├─ 0: admin
               │        │        └─ 1: editor
               │        └─ 1
               │           └─ #/oneOf/1/allOf/0/properties/enabled
               │              ├─ types
               │              │  └─ 0: boolean
               │              └─ primaryType: boolean
               └─ 1
                  └─ #/oneOf/1/allOf/1
                     ├─ types
                     │  └─ 0: object
                     ├─ primaryType: object
                     └─ children
                        ├─ 0
                        │  └─ #/oneOf/1/allOf/1/properties/supervisor
                        │     ├─ types
                        │     │  └─ 0: string
                        │     └─ primaryType: string
                        └─ 1
                           └─ #/oneOf/1/allOf/1/properties/key
                              ├─ types
                              │  └─ 0: string
                              └─ primaryType: string
"
`;

exports[`SchemaTree output given oneOf combiner placed next to allOf given allOf merging enabled, should merge contents of allOf combiners 1`] = `
"└─ #
   ├─ combiners
   │  └─ 0: oneOf
   └─ children
      ├─ 0
      │  └─ #/oneOf/0
      │     ├─ types
      │     │  └─ 0: object
      │     ├─ primaryType: object
      │     └─ children
      │        ├─ 0
      │        │  └─ #/oneOf/0/properties/type
      │        │     ├─ types
      │        │     │  └─ 0: string
      │        │     ├─ primaryType: string
      │        │     └─ enum
      │        │        ├─ 0: admin
      │        │        └─ 1: editor
      │        ├─ 1
      │        │  └─ #/oneOf/0/properties/enabled
      │        │     ├─ types
      │        │     │  └─ 0: boolean
      │        │     └─ primaryType: boolean
      │        ├─ 2
      │        │  └─ #/oneOf/0/properties/root
      │        │     ├─ types
      │        │     │  └─ 0: boolean
      │        │     └─ primaryType: boolean
      │        ├─ 3
      │        │  └─ #/oneOf/0/properties/group
      │        │     ├─ types
      │        │     │  └─ 0: string
      │        │     └─ primaryType: string
      │        └─ 4
      │           └─ #/oneOf/0/properties/expirationDate
      │              ├─ types
      │              │  └─ 0: string
      │              └─ primaryType: string
      └─ 1
         └─ #/oneOf/1
            ├─ types
            │  └─ 0: object
            ├─ primaryType: object
            └─ children
               ├─ 0
               │  └─ #/oneOf/1/properties/type
               │     ├─ types
               │     │  └─ 0: string
               │     ├─ primaryType: string
               │     └─ enum
               │        ├─ 0: admin
               │        └─ 1: editor
               ├─ 1
               │  └─ #/oneOf/1/properties/enabled
               │     ├─ types
               │     │  └─ 0: boolean
               │     └─ primaryType: boolean
               ├─ 2
               │  └─ #/oneOf/1/properties/supervisor
               │     ├─ types
               │     │  └─ 0: string
               │     └─ primaryType: string
               └─ 3
                  └─ #/oneOf/1/properties/key
                     ├─ types
                     │  └─ 0: string
                     └─ primaryType: string
"
`;

exports[`SchemaTree output should generate valid tree for allof-with-type.json 1`] = `
"└─ #
   ├─ combiners
   │  └─ 0: oneOf
   └─ children
      ├─ 0
      │  └─ #/oneOf/0
      │     ├─ types
      │     │  └─ 0: object
      │     ├─ primaryType: object
      │     └─ children
      │        ├─ 0
      │        │  └─ #/oneOf/0/properties/actionType
      │        │     ├─ types
      │        │     │  └─ 0: string
      │        │     ├─ primaryType: string
      │        │     └─ enum
      │        │        ├─ 0: Cancel
      │        │        ├─ 1: Confirm
      │        │        └─ 2: Update
      │        ├─ 1
      │        │  └─ #/oneOf/0/properties/id
      │        │     ├─ types
      │        │     │  └─ 0: string
      │        │     └─ primaryType: string
      │        ├─ 2
      │        │  └─ #/oneOf/0/properties/externalId
      │        │     ├─ types
      │        │     │  └─ 0: string
      │        │     └─ primaryType: string
      │        ├─ 3
      │        │  └─ #/oneOf/0/properties/calculateCosts
      │        │     ├─ types
      │        │     │  └─ 0: boolean
      │        │     └─ primaryType: boolean
      │        ├─ 4
      │        │  └─ #/oneOf/0/properties/calculateDates
      │        │     ├─ types
      │        │     │  └─ 0: boolean
      │        │     └─ primaryType: boolean
      │        └─ 5
      │           └─ #/oneOf/0/properties/items
      │              ├─ types
      │              │  └─ 0: array
      │              ├─ primaryType: array
      │              └─ children
      │                 └─ 0
      │                    └─ #/oneOf/0/properties/items/items
      │                       ├─ types
      │                       │  └─ 0: string
      │                       └─ primaryType: string
      └─ 1
         └─ #/oneOf/1
            ├─ types
            │  └─ 0: object
            ├─ primaryType: object
            └─ children
               ├─ 0
               │  └─ #/oneOf/1/properties/actionType
               │     ├─ types
               │     │  └─ 0: string
               │     ├─ primaryType: string
               │     └─ enum
               │        └─ 0: Create
               ├─ 1
               │  └─ #/oneOf/1/properties/id
               │     ├─ types
               │     │  └─ 0: string
               │     └─ primaryType: string
               ├─ 2
               │  └─ #/oneOf/1/properties/externalId
               │     ├─ types
               │     │  └─ 0: string
               │     └─ primaryType: string
               ├─ 3
               │  └─ #/oneOf/1/properties/calculateCosts
               │     ├─ types
               │     │  └─ 0: boolean
               │     └─ primaryType: boolean
               ├─ 4
               │  └─ #/oneOf/1/properties/calculateDates
               │     ├─ types
               │     │  └─ 0: boolean
               │     └─ primaryType: boolean
               └─ 5
                  └─ #/oneOf/1/properties/items
                     ├─ types
                     │  └─ 0: array
                     ├─ primaryType: array
                     └─ children
                        └─ 0
                           └─ #/oneOf/1/properties/items/items
                              ├─ types
                              │  └─ 0: string
                              └─ primaryType: string
"
`;

exports[`SchemaTree output should generate valid tree for array-of-allofs.json 1`] = `
"└─ #
   ├─ types
   │  └─ 0: object
   ├─ primaryType: object
   └─ children
      └─ 0
         └─ #/properties/array-all-objects
            ├─ types
            │  └─ 0: array
            ├─ primaryType: array
            └─ children
               └─ 0
                  └─ #/properties/array-all-objects/items
                     ├─ types
                     │  └─ 0: object
                     ├─ primaryType: object
                     └─ children
                        ├─ 0
                        │  └─ #/properties/array-all-objects/items/properties/foo
                        │     ├─ types
                        │     │  └─ 0: string
                        │     └─ primaryType: string
                        └─ 1
                           └─ #/properties/array-all-objects/items/properties/bar
                              ├─ types
                              │  └─ 0: string
                              └─ primaryType: string
"
`;

exports[`SchemaTree output should generate valid tree for oneof-with-array-type.json 1`] = `
"└─ #
   ├─ combiners
   │  └─ 0: oneOf
   └─ children
      ├─ 0
      │  └─ #/oneOf/0
      │     ├─ types
      │     │  └─ 0: array
      │     ├─ primaryType: array
      │     └─ children
      │        └─ 0
      │           └─ #/oneOf/0/items
      │              ├─ types
      │              │  └─ 0: object
      │              ├─ primaryType: object
      │              └─ children
      │                 ├─ 0
      │                 │  └─ #/oneOf/0/items/properties/foo
      │                 │     ├─ types
      │                 │     │  └─ 0: string
      │                 │     ├─ primaryType: string
      │                 │     └─ enum
      │                 │        └─ 0: test
      │                 └─ 1
      │                    └─ #/oneOf/0/items/properties/baz
      │                       ├─ types
      │                       │  └─ 0: integer
      │                       └─ primaryType: integer
      └─ 1
         └─ #/oneOf/1
            ├─ types
            │  └─ 0: array
            ├─ primaryType: array
            └─ children
               └─ 0
                  └─ #/oneOf/1/items
                     ├─ types
                     │  └─ 0: object
                     ├─ primaryType: object
                     └─ children
                        ├─ 0
                        │  └─ #/oneOf/1/items/properties/foo
                        │     ├─ types
                        │     │  └─ 0: number
                        │     └─ primaryType: number
                        ├─ 1
                        │  └─ #/oneOf/1/items/properties/baz
                        │     ├─ types
                        │     │  └─ 0: integer
                        │     └─ primaryType: integer
                        └─ 2
                           └─ #/oneOf/1/items/properties/bar
                              ├─ types
                              │  └─ 0: string
                              └─ primaryType: string
"
`;
